[package]
name = "mdbookshelf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.18"
walkdir = "2"

#clap = { version = "3.0", features = ["cargo"] }
#clap_complete = "3.0"
toml = "0.5.1"

#Static Server features
anyhow = "1.0.28"
futures-util = { version = "0.3.4" }#, optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}#, optional = true }
warp = { version = "0.3.1", default-features = false, features = ["websocket"]}#, optional = true }
